--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="white__style_items.css">
+    <link rel="stylesheet"  href="https://raw.githubusercontent.com/mrwhiteered/white__elemnts/main/white__style_items.css">
     <title></title>
 </head>
 
@@ -38,7 +38,7 @@
     </ul>
      <!--END mouseOver add text element -->
     
-    <script  src="white__scripts_file.js"></script>
+    <script  src="https://raw.githubusercontent.com/mrwhiteered/white__elemnts/main/white__scripts_file.js"></script>
 </body>
 
 </html>
