--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet"  href="https://raw.githubusercontent.com/mrwhiteered/white__elemnts/main/white__style_items.css">
+    <link rel="stylesheet" href="https://mrwhiteered.github.io/white__elemnts/white__style_items.css">
     <title></title>
 </head>
 
@@ -13,21 +13,21 @@
     <ul class="w__moat_list">
         <li class="w__moat_item">
 
-            <img src="img (1).png" class="w__moat_image" alt="Your-image">
+            <img src="white__test_img.jpg" class="w__moat_image" alt="Your-image">
             <h3 class="w__moat_title">Видеосъемка</h3>
 
             <ul class="w__moat_sub-list">
                 <li class="w__moat_sub-item">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing 
-                </li>
-                <li class="w__moat_sub-item">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing 
+                    Lorem ipsum dolor sit, amet consectetur adipisicing
                 </li>
                 <li class="w__moat_sub-item">
                     Lorem ipsum dolor sit, amet consectetur adipisicing
                 </li>
                 <li class="w__moat_sub-item">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing 
+                    Lorem ipsum dolor sit, amet consectetur adipisicing
+                </li>
+                <li class="w__moat_sub-item">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing
                 </li>
                 <li class="w__moat_sub-item">
                     Lorem ipsum dolor sit, amet consectetur adipisicing
@@ -36,9 +36,9 @@
 
         </li>
     </ul>
-     <!--END mouseOver add text element -->
-    
-    <script  src="https://raw.githubusercontent.com/mrwhiteered/white__elemnts/main/white__scripts_file.js"></script>
+    <!--END mouseOver add text element -->
+
+    <script src="https://mrwhiteered.github.io/white__elemnts/white__scripts_file.js"></script>
 </body>
 
 </html>
