--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul class="w__moat_list">
         <li class="w__moat_item">
 
-            <img src="white__test_img.jpg" class="w__moat_image" alt="Your-image">
+            <img src="https://mrwhiteered.github.io/Dell/img/news01.png" class="w__moat_image" alt="Your-image">
             <h3 class="w__moat_title">Видеосъемка</h3>
 
             <ul class="w__moat_sub-list">
