fade-in fade-up

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://mrwhiteered.github.io/white__elemnts/white__style_items.css">
+    <link rel="stylesheet" href="style.css">
     <title></title>
 </head>
 
 <body>
+   
     <!-- START mouseOver add text element -->
     <ul class="w__moat_list">
         <li class="w__moat_item">
@@ -38,7 +40,95 @@
     </ul>
     <!--END mouseOver add text element -->
 
+
+    <section class="services">
+        <div class="wrap__services">
+          <ul class="list__sevrvice">
+            <li class="item__service white__back Wfade-in" data-speed="0.3">
+              <div class="img__container__ser">
+                <img src="CameraC.svg" class="img__service"  alt="" />
+              </div>
+              <div class="content__service">
+                <h3 class="title__ser">Видеосъемка</h3>
+                <p class="text__ser">от 80 000руб</p>
+              </div>
+            </li>
+            <li class="item__service Wfade-in" data-speed="0.6">
+              <div class="img__container__ser">
+                <img src="tvC.svg" class="img__service"  alt="" />
+              </div>
+              <div class="content__service">
+                <h3 class="title__ser">Онлайн-трансляция</h3>
+                <p class="text__ser">от 80 000руб</p>
+              </div>
+            </li>
+            <li
+              class="item__service adaptiv white__back Wfade-in"
+              data-speed="0.9"
+            >
+              <div class="img__container__ser">
+                <img src="GuitarC.svg" class="img__service"  alt="" />
+              </div>
+              <div class="content__service">
+                <h3 class="title__ser">Съемка клипов</h3>
+                <p class="text__ser">от 80 000руб</p>
+              </div>
+            </li>
+            <li class="item__service Wfade-in" data-speed="1.2">
+              <div class="img__container__ser">
+                <img src="ballc.svg" class="img__service"  alt="" />
+              </div>
+              <div class="content__service">
+                <h3 class="title__ser">Трансляция спортивных мероприятий</h3>
+                <p class="text__ser">от 80 000руб</p>
+              </div>
+            </li>
+            <li class="item__service white__back Wfade-up" data-speed="0.3">
+                <div class="img__container__ser">
+                  <img src="CameraC.svg" class="img__service"  alt="" />
+                </div>
+                <div class="content__service">
+                  <h3 class="title__ser">Видеосъемка</h3>
+                  <p class="text__ser">от 80 000руб</p>
+                </div>
+              </li>
+              <li class="item__service Wfade-up" data-speed="0.6">
+                <div class="img__container__ser">
+                  <img src="tvC.svg" class="img__service"  alt="" />
+                </div>
+                <div class="content__service">
+                  <h3 class="title__ser">Онлайн-трансляция</h3>
+                  <p class="text__ser">от 80 000руб</p>
+                </div>
+              </li>
+              <li
+                class="item__service adaptiv white__back Wfade-up"
+                data-speed="0.9"
+              >
+                <div class="img__container__ser">
+                  <img src="GuitarC.svg" class="img__service"  alt="" />
+                </div>
+                <div class="content__service">
+                  <h3 class="title__ser">Съемка клипов</h3>
+                  <p class="text__ser">от 80 000руб</p>
+                </div>
+              </li>
+              <li class="item__service Wfade-up" data-speed="1.2">
+                <div class="img__container__ser">
+                  <img src="ballc.svg" class="img__service"  alt="" />
+                </div>
+                <div class="content__service">
+                  <h3 class="title__ser">Трансляция спортивных мероприятий</h3>
+                  <p class="text__ser">от 80 000руб</p>
+                </div>
+              </li>
+          </ul>
+        </div>
+        
+      </section>
+
     <script src="https://mrwhiteered.github.io/white__elemnts/white__scripts_file.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
