--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://mrwhiteered.github.io/white__elemnts/white__style_items.css">
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <title></title>
 </head>
 
@@ -128,7 +128,7 @@
       </section>
 
     <script src="https://mrwhiteered.github.io/white__elemnts/white__scripts_file.js"></script>
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
 </body>
 
 </html>
